backend T3 enhancement for 2.0.11 release